fix(styles): enhance table styling and apply consistent spacing on "Add Product" page

--- a/client/src/features/products/pages/ProductAddPage.module.css
+++ b/client/src/features/products/pages/ProductAddPage.module.css
@@ -1,5 +1,17 @@
-table {
-    padding-bottom: 8px;
+table.borders {
+    border: 1px solid var(--color-secondary);
+    border-radius: 8px;
+}
+
+table.borders thead tr th {
+    background-color: var(--color-secondary);
+    border-bottom: 1px solid var(--color-secondary);
+}
+
+table,
+th,
+td {
+    border-spacing: 0;
 }
 
 table colgroup col:nth-child(1) {
@@ -19,12 +31,21 @@ table thead tr th:nth-child(1) {
     text-align: left;
 }
 
+table thead tr th,
+table tbody tr td {
+    padding: 4px 8px;
+}
+
 table tbody tr {
     height: 48px;
 }
 
-table tbody tr.sub-row td:nth-child(1) {
-    /*padding-left: 24px;*/
+table tbody tr:first-child td {
+    padding-top: 8px;
+}
+
+table tbody tr:last-child td {
+    padding-bottom: 8px;
 }
 
 table tbody tr td label.required::after {
